angular and demo slides

--- a/index.html
+++ b/index.html
@@ -167,6 +167,50 @@ enum Language { TypeScript, DotNet, Java, PHP, JavaScript }
             <h5>- C# sobre TypeScript</h3>
         </section>
 
+        
+        <section>
+            <h3>Angular</h3>
+            <ul>
+                <li><a href="http://angular.io">http://angular.io</a></li>
+                <li>Parceria Google + Microsoft</li>
+                <li>Open Source</li>
+                <li>Não é continuação do 1</li>
+                <li>Foi reescrito</li>
+                <li>Uso de padrões web e web components</li>
+            </ul>
+
+</code></pre>
+        </section>
+
+        <section>
+            <p style="text-align:left"><code>> npm install -g @angular/cli</code></p>
+            <p style="text-align:left"><code>> ng new</code></p>
+            <p style="text-align:left"><code>> ng serve</code></p>
+        </section>
+
+        <section data-background="#232323">
+            <h2><strong>Demo Time!</strong></h2>
+            <img src="img/pics-or-it-didnt-happen.jpg">
+        </section>
+
+        <section>
+            <h1>Questions?</h1>
+        </section>
+
+        <section>
+            <h2><code style="font-size:60px">&lt;/html&gt;</code></h2>
+            <h3>
+                <a href="https://github.com/ricardo-mello" target="_blank" style="text-transform: lowercase">
+                    @ricardo-mello
+                </a>
+            </h3>
+            <h4>
+                <a href="http://ricardo-mello.github.io/ionic-present/#/" style="text-transform: lowercase">
+                    http://ricardo-mello.github.io/ionic-electron-present
+                </a>
+            </h4>
+        </section>
+
     </div>
 
 </div>
