--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         <section data-background="img/built-for-developers.png">
         </section>
 
-        <section>
-            <h1>TypeScript</h2>
+        <section data-background="img/typescript-bg.png">
         </section>
 
         <section>
@@ -167,6 +166,12 @@ enum Language { TypeScript, DotNet, Java, PHP, JavaScript }
             <h5>- C# sobre TypeScript</h3>
         </section>
 
+        <section>
+            <h1>Think Async</h1>
+        </section>
+
+        <section data-background="img/angular-bg.png">
+        </section>
         
         <section>
             <h3>Angular</h3>
